# MacOSSnakeC--

./: README.md
Snake.app/: Icon.icns
Snake.app/Contents/: Info.plist
Snake.app/Contents/MacOS/: Snake
Src/: CMakeLists.txt  main.cpp
