cmake_minimum_required(VERSION 3.26)
project(Snake)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
file(GLOB_RECURSE SRC_FILES *.cpp)
find_package(SDL2 REQUIRED COMPONENTS SDL2)
find_package(SDL2_image REQUIRED COMPONENTS SDL2_image)
add_executable(Snake main.cpp ${SRC_FILES})
target_link_libraries(Snake PRIVATE SDL2::SDL2 PRIVATE SDL2_image::SDL2_image)
